--- a/menu_project/static/css/style.css
+++ b/menu_project/static/css/style.css
@@ -693,10 +693,16 @@ body {
     width: 332px;
 }
 
+.menu-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 0.5rem;
+}
+
 .menu-title {
     font-size: 1.2rem;
     font-weight: 600;
-    margin-bottom: 0.5rem;
     color: #fff;
     text-align: left;
 }
@@ -704,13 +710,11 @@ body {
 .menu-title-en {
     font-size: 0.9rem;
     color: #ccc;
-    margin-bottom: 0.2rem;
     text-align: left;
 }
 
 .menu-description {
     color: #aaa;
-    font-size: 0.9rem;
     margin-bottom: 0.5rem;
     line-height: 1.4;
     text-align: left;
@@ -727,8 +731,9 @@ body {
     font-size: 1.3rem;
     font-weight: 700;
     color: #4CAF50;
-    margin-top: auto;
     text-align: right;
+    white-space: nowrap;
+    margin-left: 1rem;
 }
 
 .no-menu {
