Fix: Change h3 to span for inline menu title and price

--- a/menu_project/menu/templates/menu/menu_list.html
+++ b/menu_project/menu/templates/menu/menu_list.html
@@ -176,8 +176,8 @@
                                 <p class="menu-title-en">{{ item.name_en }}</p>
                                 {% endif %}
                                 <div class="menu-header">
-                                    <h3 class="menu-title">{{ item.name }}</h3>
-                                    <div class="menu-price">{{ item.price|floatformat:"-2" }}</div>
+                                    <span class="menu-title">{{ item.name }}</span>
+                                    <span class="menu-price">{{ item.price|floatformat:"-2" }}</span>
                                 </div>
                                 <p class="menu-description">{{ item.description }}</p>
                                 
