Fix: Display price as entered without formatting

--- a/menu_project/menu/templates/menu/menu_list.html
+++ b/menu_project/menu/templates/menu/menu_list.html
@@ -177,7 +177,7 @@
                                 {% endif %}
                                 <div class="menu-header">
                                     <span class="menu-title">{{ item.name }}</span>
-                                    <span class="menu-price">{{ item.price|floatformat:"-2" }}</span>
+                                    <span class="menu-price">{{ item.price }}</span>
                                 </div>
                                 <p class="menu-description">{{ item.description }}</p>
                                 
