--- a/menu_project/menu/templates/menu/menu_main.html
+++ b/menu_project/menu/templates/menu/menu_main.html
@@ -44,13 +44,19 @@
                             {% if category.sub_categories.exists %}
                             <span class="toggle-icon" id="icon-{{ category.id }}">▶</span>
                             {% endif %}
-                            <a href="{% url 'menu:menu_list' category.id %}">{{ category.name }}</a>
+                            <a href="{% url 'menu:menu_list' category.id %}">
+                                {% if category.name_en %}<div class="category-name-en">{{ category.name_en }}</div>{% endif %}
+                                <div class="category-name-ko">{{ category.name }}</div>
+                            </a>
                         </div>
                         {% if category.sub_categories.exists %}
                         <ul class="sub-categories" id="sub-{{ category.id }}" style="display: none;">
                             {% for sub_cat in category.sub_categories.all %}
                                 {% if not sub_cat.category_image %}
-                                <li><a href="{% url 'menu:menu_list' sub_cat.id %}">{{ sub_cat.name }}</a></li>
+                                <li><a href="{% url 'menu:menu_list' sub_cat.id %}">
+                                    {% if sub_cat.name_en %}<div class="category-name-en">{{ sub_cat.name_en }}</div>{% endif %}
+                                    <div class="category-name-ko">{{ sub_cat.name }}</div>
+                                </a></li>
                                 {% endif %}
                             {% endfor %}
                         </ul>
@@ -96,7 +102,10 @@
                 <div class="category-grid">
                     {% for category in categories %}
                     <a href="{% url 'menu:menu_list' category.id %}" class="category-card">
-                        <h3>{{ category.name }}</h3>
+                        {% if category.name_en %}
+                        <p class="category-name-en">{{ category.name_en }}</p>
+                        {% endif %}
+                        <h3 class="category-name-ko">{{ category.name }}</h3>
                     </a>
                     {% empty %}
                     <div class="no-categories">
