--- a/menu_project/menu/templates/menu/menu_main.html
+++ b/menu_project/menu/templates/menu/menu_main.html
@@ -209,7 +209,7 @@
 
             clearTimeout(searchTimeout);
             searchTimeout = setTimeout(() => {
-                fetch(`/menu/api/search/?q=${encodeURIComponent(query)}`)
+                fetch(`/api/search/?q=${encodeURIComponent(query)}`)
                     .then(response => response.json())
                     .then(data => {
                         displaySearchResults(data.results);
