--- a/menu_project/static/css/style.css
+++ b/menu_project/static/css/style.css
@@ -712,14 +712,14 @@ body {
     width: 100%;
     max-width: 600px;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: space-between;
 }
 
-.menu-header {
+.menu-info {
+    flex: 1;
     display: flex;
-    align-items: baseline;
-    width: 100%;
+    flex-direction: column;
 }
 
 .menu-title {
@@ -727,7 +727,8 @@ body {
     font-weight: 600;
     color: #fff;
     margin: 0;
-    flex: 1;
+    padding: 0;
+    line-height: 1;
 }
 
 .menu-title-en {
@@ -740,22 +741,26 @@ body {
 
 .menu-description {
     color: #aaa;
-    margin-bottom: 0.5rem;
+    margin: 0.5rem 0 0 0;
+    padding: 0;
     line-height: 1.4;
 }
 
 .menu-notes {
     color: #888;
     font-size: 0.8rem;
-    margin-bottom: 0.5rem;
+    margin: 0.3rem 0 0 0;
+    padding: 0;
 }
 
 .menu-price {
-    font-size: 1.3rem;
-    font-weight: 700;
-    color: #4CAF50;
+    font-size: 1.1rem;
+    font-weight: 600;
+    color: #fff;
+    margin-left: 2rem;
     white-space: nowrap;
-    margin: 0 0 0 auto;
+}
+}
 }
 
 .no-menu {
