Align price and Korean menu name at bottom
- Changed align-items from flex-start to flex-end
- Price and Korean menu name now have same bottom alignment
- Removed align-self override from menu-price

--- a/menu_project/static/css/style.css
+++ b/menu_project/static/css/style.css
@@ -724,7 +724,7 @@ body {
 
 .menu-title-line {
     display: flex;
-    align-items: flex-start;
+    align-items: flex-end;
     justify-content: space-between;
     width: 100%;
 }
@@ -765,7 +765,6 @@ body {
     color: #fff;
     margin-left: 2rem;
     white-space: nowrap;
-    align-self: flex-start;
 }
 }
 }
