--- a/menu_project/menu/templates/menu/menu_list.html
+++ b/menu_project/menu/templates/menu/menu_list.html
@@ -303,14 +303,12 @@
                 const normalizedCurrentPath = currentPath.replace(/\/$/, '');
                 
                 if (normalizedBaseUrl === normalizedCurrentPath) {
-                    // 같은 페이지 내 앵커로 이동
-                    setTimeout(() => {
-                        const element = document.getElementById(anchor);
-                        if (element) {
-                            element.scrollIntoView({ behavior: 'smooth', block: 'center' });
-                            history.pushState(null, null, '#' + anchor);
-                        }
-                    }, 100);
+                    // 같은 페이지 내 앵커로 즉시 이동
+                    const element = document.getElementById(anchor);
+                    if (element) {
+                        element.scrollIntoView({ behavior: 'smooth', block: 'center' });
+                        history.pushState(null, null, '#' + anchor);
+                    }
                 } else {
                     // 다른 페이지로 이동
                     window.location.href = url;
